@@ -8,7 +8,9 @@ group 'org.example'
 repositories {
     mavenCentral()
 }
-
+compileJava {
+    options.compilerArgs += ['--enable-preview']
+}
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     implementation 'com.google.code.gson:gson:2.8.9'
